--- a/index.html
+++ b/index.html
@@ -1,110 +1,200 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hi">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>MacroDroid Automation</title>
-<style>
-  body {
-    background: linear-gradient(135deg, #a96ed8, #7e3cd4);
-    font-family: Arial, sans-serif;
-    padding: 20px;
-    color: #fff;
-  }
-  .box {
-    background: #333;
-    padding: 10px;
-    border-radius: 8px;
-    margin: 10px 0;
-  }
-  h2 {
-    text-align: center;
-    color: #0ff;
-  }
-  .actions {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-  }
-  .actions button {
-    background: #f35;
-    border: none;
-    padding: 8px;
-    border-radius: 5px;
-    color: white;
-    cursor: pointer;
-    flex: 1 1 45%;
-  }
-  .log {
-    background: #222;
-    padding: 10px;
-    border-radius: 8px;
-    min-height: 100px;
-    overflow-y: auto;
-  }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MacroDroid ऑटोमेशन</title>
+    <style>
+        body {
+            background-color: #a74ac7;
+            font-family: 'Arial', sans-serif;
+            color: white;
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+        .container {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            border-radius: 10px;
+            width: 400px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+        }
+        h2 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #ffeb3b;
+        }
+        .section {
+            margin-bottom: 15px;
+        }
+        .section h3 {
+            font-size: 16px;
+            margin-bottom: 5px;
+            color: #00e676;
+        }
+        input[type="text"] {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+            border: none;
+            border-radius: 5px;
+            background-color: #fff;
+            color: #333;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 5px;
+            background-color: #ff4444;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #cc0000;
+        }
+        .quick-actions {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 5px;
+        }
+        .quick-actions button {
+            flex: 1 1 calc(33.33% - 5px);
+            background-color: #ff9800;
+        }
+        .quick-actions button:hover {
+            background-color: #f57c00;
+        }
+        #webhookUrl {
+            background-color: #00aaff;
+            padding: 10px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+            text-align: center;
+        }
+        .logo {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .logo img {
+            width: 100px;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
+    <div class="container">
+        <div class="logo">
+            <img src="https://via.placeholder.com/100?text=Fail+OK" alt="Fail OK Logo">
+        </div>
+        <h2>MacroDroid ऑटोमेशन</h2>
+        <div id="webhookUrl">
+            अपना वेबहुक URL नीचे दर्ज करें:<br>
+            <input type="text" id="webhookInput" placeholder="https://your-webhook-url">
+            <button onclick="saveWebhook()">सेव करें</button>
+        </div>
 
-<h2>MacroDroid Automation</h2>
+        <div class="section">
+            <h3>पॉपअप (टोस्ट)</h3>
+            <input type="text" id="toastInput" placeholder="संदेश">
+            <button onclick="sendCommand('toast')">भेजें</button>
+        </div>
 
-<div class="box">
-  <label>Enter Webhook URL:</label><br/>
-  <input id="webhookInput" placeholder="https://trigger.macrodroid.com/your-id" style="width:100%;" /><br/>
-  <button onclick="setUrl()">Proceed</button>
-</div>
+        <div class="section">
+            <h3>नोटिफिकेशन दिखाएं</h3>
+            <input type="text" id="notificationInput" placeholder="संदेश">
+            <button onclick="sendCommand('notification')">भेजें</button>
+        </div>
 
-<div class="box">
-  <h3>Popup (Toast)</h3>
-  <input id="toastInput" placeholder="Input:" style="width:100%;" />
-  <button onclick="sendCommand('popup', { message: document.getElementById('toastInput').value })">Test</button>
-</div>
+        <div class="section">
+            <h3>कुछ बोलें</h3>
+            <input type="text" id="speakInput" placeholder="बोलने के लिए टेक्स्ट">
+            <button onclick="sendCommand('speak')">भेजें</button>
+        </div>
 
-<div class="actions">
-  <!-- Buttons as per your screenshot's labels -->
-  <button onclick="sendCommand('recent')">Recent</button>
-  <button onclick="sendCommand('home')">Home</button>
-  <button onclick="sendCommand('back')">Back</button>
-  <button onclick="sendCommand('dndOn')">DND ON</button>
-  <button onclick="sendCommand('dndOff')">DND OFF</button>
-  <button onclick="sendCommand('lockScreen')">Lock Screen</button>
-  <button onclick="sendCommand('wifiOn')">WiFi On</button>
-  <button onclick="sendCommand('wifiOff')">WiFi Off</button>
-  <button onclick="sendCommand('torchToggle')">Torch Toggle</button>
-  <button onclick="sendCommand('bluetoothOn')">Bluetooth On</button>
-  <button onclick="sendCommand('bluetoothOff')">Bluetooth Off</button>
-  <button onclick="sendCommand('takeSelfie')">Take Selfie</button>
-  <button onclick="sendCommand('hotspotOn')">Hotspot On</button>
-  <button onclick="sendCommand('hotspotOff')">Hotspot Off</button>
-  <button onclick="sendCommand('expandNotificationBar')">Expand Notification Bar</button>
-  <button onclick="sendCommand('collapseNotificationBar')">Collapse Notification Bar</button>
-  <button onclick="sendCommand('ringAlarmAtFullVolume')">Ring Alarm At Full Volume</button>
-  <button onclick="sendCommand('stopAlarm')">Stop Alarm</button>
-  <button onclick="sendCommand('disableMd')">Disable MD</button>
-  <!-- Add remaining commands as per your UI -->
-</div>
+        <div class="section">
+            <h3>फ्लोटिंग टेक्स्ट</h3>
+            <input type="text" id="floatInput" placeholder="टेक्स्ट">
+            <button onclick="sendCommand('float')">भेजें</button>
+        </div>
 
-<h3>Logs:</h3>
-<div class="log" id="logBox"></div>
+        <div class="section">
+            <h3>टेक्स्ट पेस्ट करें</h3>
+            <input type="text" id="pasteInput" placeholder="टेक्स्ट">
+            <button onclick="sendCommand('paste')">भेजें</button>
+        </div>
 
-<script>
-let webhookUrl = '';
-function setUrl() {
-  webhookUrl = document.getElementById('webhookInput').value.trim();
-  log('Webhook URL set.');
-}
-function log(msg) {
-  document.getElementById('logBox').innerHTML += msg + '<br>';
-}
-function sendCommand(command, params = {}) {
-  if (!webhookUrl) {
-    log('Error: Please set Webhook URL.');
-    return;
-  }
-  fetch(`${webhookUrl}?command=${command}&${new URLSearchParams(params)}`)
-    .then(res => log(`${command}: Success`))
-    .catch(err => log(`${command}: Failed (${err})`));
-}
-</script>
+        <div class="section">
+            <h3>स्क्रीन डिम करें</h3>
+            <input type="text" id="dimInput" placeholder="0-100">
+            <button onclick="sendCommand('dimScreen')">भेजें</button>
+        </div>
+
+        <div class="section">
+            <h3>ब्राइटनेस नियंत्रण</h3>
+            <input type="text" id="brightnessInput" placeholder="0-100">
+            <button onclick="sendCommand('controlBrightness')">भेजें</button>
+        </div>
+
+        <div class="section">
+            <h3>त्वरित एक्शन्स</h3>
+            <div class="quick-actions">
+                <button onclick="sendCommand('wifiOn')">WIFI ON</button>
+                <button onclick="sendCommand('wifiOff')">WIFI OFF</button>
+                <button onclick="sendCommand('lockScreen')">Lock Screen</button>
+                <button onclick="sendCommand('bluetoothOn')">Bluetooth On</button>
+                <button onclick="sendCommand('bluetoothOff')">Bluetooth Off</button>
+                <button onclick="sendCommand('takeSelfie')">Take Selfie</button>
+                <button onclick="sendCommand('hotspotOn')">Hotspot On</button>
+                <button onclick="sendCommand('hotspotOff')">Hotspot Off</button>
+                <button onclick="sendCommand('expandNotification')">Expand Notification</button>
+                <button onclick="sendCommand('collapseBar')">Collapse Bar</button>
+                <button onclick="sendCommand('ringAlarm')">Ring Alarm</button>
+                <button onclick="sendCommand('fullVolume')">Full Volume</button>
+                <button onclick="sendCommand('stopAlarm')">Stop Alarm</button>
+                <button onclick="sendCommand('disableMD')">Disable MD</button>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        let webhookUrl = '';
+
+        function saveWebhook() {
+            webhookUrl = document.getElementById('webhookInput').value;
+            alert('वेबहुक URL सेव हो गया!');
+        }
+
+        function sendCommand(command) {
+            if (!webhookUrl) {
+                alert('कृपया पहले वेबहुक URL सेव करें!');
+                return;
+            }
+
+            let data = {};
+            if (command === 'toast') data.message = document.getElementById('toastInput').value;
+            if (command === 'notification') data.message = document.getElementById('notificationInput').value;
+            if (command === 'speak') data.text = document.getElementById('speakInput').value;
+            if (command === 'float') data.text = document.getElementById('floatInput').value;
+            if (command === 'paste') data.text = document.getElementById('pasteInput').value;
+            if (command === 'dimScreen') data.value = document.getElementById('dimInput').value;
+            if (command === 'controlBrightness') data.value = document.getElementById('brightnessInput').value;
+
+            fetch(webhookUrl, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(data)
+            })
+            .then(response => response.json())
+            .then(data => alert('कमांड भेजी गई: ' + command))
+            .catch(error => alert('कमांड भेजने में त्रुटि: ' + error));
+        }
+    </script>
 </body>
 </html>
